# rapidchecksum

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build-flatpak.sh  build.rs  build.sh  resources.qrc
flatpak/: com.rapidchecksum.app.desktop  com.rapidchecksum.app.yml  install-dolphin-servicemenu.sh  io.github.l_raider.rapidchecksum-mime.xml  io.github.l_raider.rapidchecksum-servicemenu.desktop  io.github.l_raider.rapidchecksum.desktop  io.github.l_raider.rapidchecksum.metainfo.xml  io.github.l_raider.rapidchecksum.yml
qml/: main.qml
src/: app_backend.rs  config.rs  fileio.rs  main.rs  model.rs  qt_app.cpp  worker.rs
src/hasher/: blake2b_256.rs  blake2b_512.rs  blake2sp.rs  blake3.rs  crc32.rs  ed2k.rs  md5.rs  mod.rs  sha1.rs  sha256.rs  sha3_224.rs  sha3_256.rs  sha3_384.rs  sha3_512.rs  sha512.rs
src/qt/: resources.qrc
ui/: main-window.slint
