[package]
name = "rapidchecksum"
version = "0.4.0"
edition = "2021"
description = "A Linux clone of RapidCRC — fast file hashing with CRC32, SHA1, SHA256, SHA512"
license = "GPL-3.0"

[dependencies]
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
crc32fast = "1.4"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
cxx = "=1.0.144"
cxx-gen = "=0.7.144"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
# Must match [dependencies] cxx pin to avoid symbol name version mismatch
cxx = "=1.0.144"
